--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
   "homepage": "https://dev.kavirajv.com",
   "scripts": {
     "dev": "vite",
-    "build": "tsc -b && vite build",
+    "build": "tsc -b && vite build && cp CNAME dist/",
     "lint": "eslint .",
     "preview": "vite preview",
     "deploy": "gh-pages -d dist"
